monitoria/mac323/4-2-35/grades/Vítor-Kei-Taira-Tamada_191459_assignsubmission_file_CoreVertices.java.txt

LOG DE COMPILAÇÃO E TESTE
Existem dois métodos de compilação, eles estão indicados, se um falha eu parto pro outro. Então se quiser entender o porque não compilou, verifique todos.
Segue também o log do corretor, pode ser interessante para descobrir a natureza de seus erros. A saída está trucada (não mostra todas as linha), se quiser ver todo o log, fale comigo

....................
CORREÇÃO AUTOMÁTICA
Quantidade de Testes | Veredito
20 | OK
0 | Tempo de Execução Excedido
0 | Resposta Errada
0 | Erro de Execução

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/4-2-35/tester/checker/checker' is up to date.
CoreVertices.java:16: error: cannot find symbol
    Digraph G = new Digraph(n);
    ^
  symbol:   class Digraph
  location: class CoreVertices
CoreVertices.java:16: error: cannot find symbol
    Digraph G = new Digraph(n);
                    ^
  symbol:   class Digraph
  location: class CoreVertices
CoreVertices.java:28: error: cannot find symbol
    KosarajuSharirSCC scc = new KosarajuSharirSCC(G);
    ^
  symbol:   class KosarajuSharirSCC
  location: class CoreVertices
CoreVertices.java:28: error: cannot find symbol
    KosarajuSharirSCC scc = new KosarajuSharirSCC(G);
                                ^
  symbol:   class KosarajuSharirSCC
  location: class CoreVertices
CoreVertices.java:33: error: cannot find symbol
    Queue<Integer>[] components = (Queue<Integer>[]) new Queue[M];
    ^
  symbol:   class Queue
  location: class CoreVertices
CoreVertices.java:33: error: cannot find symbol
    Queue<Integer>[] components = (Queue<Integer>[]) new Queue[M];
                                   ^
  symbol:   class Queue
  location: class CoreVertices
CoreVertices.java:33: error: cannot find symbol
    Queue<Integer>[] components = (Queue<Integer>[]) new Queue[M];
                                                         ^
  symbol:   class Queue
  location: class CoreVertices
CoreVertices.java:35: error: cannot find symbol
      components[i] = new Queue<Integer>();
                          ^
  symbol:   class Queue
  location: class CoreVertices
8 errors
=========== TENTANDO COMPILAR DE NOVO (imports no começo do código) ==============
Note: CoreVertices.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
======= generated_000 ============

real	0m0.166s
user	0m0.152s
sys	0m0.044s
ok 3 numbers (in increasing order): 0 1 2
OK
======= generated_001 ============

real	0m0.135s
user	0m0.128s
sys	0m0.040s
ok 5 numbers (in increasing order): 0 1 2 4 5
OK
======= generated_002 ============

real	0m0.170s
user	0m0.256s
sys	0m0.008s
ok 21 numbers (in increasing order): 7 8 ... 116 118
OK
======= generated_003 ============

real	0m0.190s
user	0m0.300s
sys	0m0.036s
ok 10 numbers (in increasing order): 11 21 ... 80 112
OK
======= generated_004 ============

real	0m0.234s
user	0m0.416s
sys	0m0.064s
ok 436 numbers (in increasing order): 0 5 ... 718 719
OK
======= generated_005 ============

real	0m0.487s
user	0m0.908s
sys	0m0.076s
ok 422 numbers (in increasing order): 1 2 ... 581 582
OK
======= generated_006 ============

real	0m0.819s
user	0m1.292s
sys	0m0.104s
ok 8 numbers (in increasing order): 3 33 ... 456 504
OK
======= generated_007 ============

real	0m0.278s
user	0m0.576s
sys	0m0.044s
ok empty sequence
OK
======= generated_008 ============

real	0m0.261s
user	0m0.532s
sys	0m0.036s
ok empty sequence
OK
======= generated_009 ============

real	0m1.657s
user	0m1.400s
sys	0m0.112s
ok 32425 numbers (in increasing order): 0 1 ... 37950 37951
OK
======= generated_010 ============

real	0m0.686s
user	0m1.192s
sys	0m0.088s
ok empty sequence
OK
======= generated_011 ============

real	0m0.684s
user	0m1.180s
sys	0m0.116s
ok empty sequence
OK
======= generated_012 ============

real	0m0.534s
user	0m0.952s
sys	0m0.080s
ok empty sequence
OK
======= generated_013 ============

real	0m0.541s
user	0m0.976s
sys	0m0.100s
ok empty sequence
OK
======= generated_014 ============

real	0m0.555s
user	0m0.976s
sys	0m0.112s
ok empty sequence
OK
======= generated_015 ============

real	0m13.682s
user	0m33.596s
sys	0m0.440s
ok 7086 numbers (in increasing order): 2 24 ... 60811 60812
OK
======= generated_016 ============

real	0m12.069s
user	0m18.528s
sys	0m3.328s
ok 56184 numbers (in increasing order): 0 1 ... 60195 60196
OK
======= generated_017 ============

real	0m8.790s
user	0m13.688s
sys	0m0.380s
ok 52553 numbers (in increasing order): 0 1 ... 61238 61239
OK
======= generated_018 ============

real	0m11.235s
user	0m26.732s
sys	0m0.472s
ok 50189 numbers (in increasing order): 0 1 ... 60617 60618
OK
======= generated_019 ============

real	0m14.725s
user	0m31.356s
sys	0m0.432s
ok 38982 numbers (in increasing order): 1 2 ... 69098 69099
OK
